--- a/style.css
+++ b/style.css
@@ -108,8 +108,7 @@
 }
 
 .favorite_animal {
-   /* background: url("img/Giant_Panda.png") no-repeat center cover; */
-  background-image: url("img/Giant_Panda.png");
+  background-image: url("assets/img/Giant_Panda.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
